# allocate

./: .eslintrc.json  .gitignore  .prettierrc  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  entrypoint.sh  nx.json  package-lock.json  package.json  tsconfig.base.json
apps/service/: .env.db.example  .env.example  .flake8  Dockerfile  README.md  manage.py  project.json  pyproject.toml  sonar-project.properties
apps/service/assets/: constants.py  dropdowns.py  filters.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/service/authapp/: constants.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/service/client/: constants.py  filters.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/service/common/: constants.py  models.py  serializers.py  service.py  tests.py  urls.py  view.py
apps/service/dashboard/: constant.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/service/helpers/: exception_handler.py  exceptions.py  pagination.py
apps/service/nginx/: Dockerfile  default.conf
apps/service/project/: constants.py  filters.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/service/report/: constant.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/service/search/: constants.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/service/staffing_tool/: asgi.py  swagger.py  urls.py  wsgi.py
apps/service/user/: constants.py  filter.py  managers.py  models.py  serializers.py  services.py  (+3 more)
(+515 files in other folders)
